--- a/Rent-Application/house_rent_application/pubspec.yaml
+++ b/Rent-Application/house_rent_application/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_auth: ^3.4.1
   firebase_core: ^1.0.1
   cloud_firestore: ^3.1.17
+  google_nav_bar: ^5.0.6
+  email_validator: ^2.1.17
    
 
 
